--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      if(localStorage.getItem('font-mode') === 'sans'){document.documentElement.setAttribute('font-mode', 'sans')} else if(localStorage.getItem('font-mode') === 'serif'){document.documentElement.setAttribute('font-mode', 'serif')} else {document.documentElement.setAttribute('font-mode', 'sans')}
+      if (localStorage.getItem('color-mode') === 'dark' || (window.matchMedia('(prefers-color-scheme: dark)').matches && !localStorage.getItem('color-mode')))
+      {document.documentElement.setAttribute('color-mode', 'dark')}
+      else if(localStorage.getItem('color-mode') !== null)
+      {document.documentElement.setAttribute('color-mode', localStorage.getItem('color-mode'))}
+      else{document.documentElement.setAttribute('color-mode', 'light')}
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
